--- a/src/main/resources/templates/messages/dialogue.html
+++ b/src/main/resources/templates/messages/dialogue.html
@@ -18,7 +18,7 @@
         <!---->
         <div class="container text-secondary fs-5 my-5">
             <!---->
-            <div class="row mb-5">
+            <div class="row mb-5" th:if="${recipient.isHospitalEmployee && !recipient.isDismissed || recipient.isPatient && recipient.isActive}">
                 <div class="col-12">
                     <form id="message-form">
                         <input class="visually-hidden" name="id" />
@@ -86,8 +86,8 @@
             <!---->
         </div>
         <!---->
-        <div th:replace="~{/fragments/modal/error-modal :: error-modal}"></div>
-        <div th:replace="~{/fragments/modal/success-modal :: success-modal}"></div>
+        <div th:replace="${recipient.isHospitalEmployee && !recipient.isDismissed || recipient.isPatient && recipient.isActive} ? ~{/fragments/modal/error-modal :: error-modal} : ~{}"></div>
+        <div th:replace="${recipient.isHospitalEmployee && !recipient.isDismissed || recipient.isPatient && recipient.isActive} ? ~{/fragments/modal/success-modal :: success-modal} : ~{}"></div>
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
         <script src="../../static/js/common/get-params.js" th:src="@{/js/common/get-params.js}"></script>
