Добавил передачу на страницу диалога всего получателя, а не только его ФИО.

--- a/src/main/resources/templates/messages/dialogue.html
+++ b/src/main/resources/templates/messages/dialogue.html
@@ -36,7 +36,7 @@
             <div class="row text-center mb-5">
                 <div class="col-12">
                     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
-                        <h1 class="fs-3 m-2 m-md-0" th:text="${recipientFullName}">Иванов Иван Иванович</h1>
+                        <h1 class="fs-3 m-2 m-md-0" th:text="${recipient.userInformation.fullName}">Иванов Иван Иванович</h1>
                         <div class="m-2 m-md-0">
                             <button class="btn btn-lg btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#filter" aria-expanded="false" aria-controls="filter" id="filter-button">Фильтр</button>
                         </div>
