Улучшил стиль футера, добавил в него дополнительную информацию.

--- a/src/main/resources/templates/fragments/footers/footer.html
+++ b/src/main/resources/templates/fragments/footers/footer.html
@@ -9,11 +9,12 @@
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
                     <div class="text-secondary text-center text-md-start m-2 m-md-0">
                         <p class="mb-1">Приложение для мониторинга состояния здоровья пациентов с ЛАГ</p>
-                        <p class="mb-1">2023/2024 год</p>
+                        <p class="mb-1">Проект реализован в рамках выполнения дипломной работы</p>
+                        <p class="mb-0">СПбГЭТУ "ЛЭТИ", 2023/2024 год</p>
                     </div>
                     <div class="m-2 m-md-0">
                         <a href="#" th:href="@{/}">
-                            <img src="../../../static/img/main.png" th:src="@{/img/main.png}" alt="Главная" width="64" />
+                            <img src="../../../static/img/main.png" th:src="@{/img/main.png}" alt="Главная" width="84" />
                         </a>
                     </div>
                 </div>
