Поправил текст в заголовках пользователей.

--- a/src/main/resources/templates/fragments/headers/main-admin-header.html
+++ b/src/main/resources/templates/fragments/headers/main-admin-header.html
@@ -28,7 +28,7 @@
                                     <a href="#" th:href="@{/patients}" class="nav-link text-secondary">Пациенты</a>
                                 </li>
                                 <li>
-                                    <a href="#" th:href="@{/contacts}" class="nav-link text-secondary">Контакты</a>
+                                    <a href="#" th:href="@{/contacts}" class="nav-link text-secondary">Контактная информация</a>
                                 </li>
                             </ul>
                         </nav>
